rename eCommerce.Core project to eCommerce.Client; create Catalog page;

--- a/eCommerce/eCommerce/eCommerce/Pages/MainPage.xaml
+++ b/eCommerce/eCommerce/eCommerce/Pages/MainPage.xaml
@@ -5,7 +5,7 @@
             x:Class="eCommerce.MainPage">
   <TabbedPage.Children>
     <local:SearchNavigationPage />
-    <local:CatalogPage />
+    <local:CatalogNavigationPage />
     <local:CartPage />
     <local:InfoPage />
   </TabbedPage.Children>
