init cart page;

--- a/eCommerce/eCommerce/eCommerce/Pages/MainPage.xaml
+++ b/eCommerce/eCommerce/eCommerce/Pages/MainPage.xaml
@@ -6,7 +6,7 @@
   <TabbedPage.Children>
     <local:SearchNavigationPage />
     <local:CatalogNavigationPage />
-    <local:CartPage />
+    <local:CartNavigationPage />
     <local:InfoPage />
   </TabbedPage.Children>
 </TabbedPage>
